--- a/intake/r2rml/config/pharmgkb/pharmgkb_genes.config
+++ b/intake/r2rml/config/pharmgkb/pharmgkb_genes.config
@@ -1,4 +1,4 @@
-connectionURL = jdbc:drill:drillbit=carnival-net:31010
+connectionURL = jdbc:drill:drillbit=localhost:31010
 user = admin
 password = admin
 mappingFile = /carnival_config/pharmgkb/pharmgkb_genes.ttl
